--- a/public/settings.html
+++ b/public/settings.html
@@ -434,6 +434,13 @@
                 </svg>
                 <span class="text-xs">首页</span>
             </a>
+
+            <a href="/tts.html" class="nav-item flex flex-col items-center py-2 px-4 text-gray-500">
+                <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.8" d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z"></path>
+                </svg>
+                <span class="text-xs">语音</span>
+            </a>
             
             <a href="/history.html" class="nav-item flex flex-col items-center py-2 px-4 text-gray-500">
                 <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -499,6 +506,6 @@
         </div>
     </div>
 
-    <script src="/main.js?v=2.1.3"></script>
+    <script src="/main.js?v=2.1.5"></script>
 </body>
 </html>
