--- a/public/index.html
+++ b/public/index.html
@@ -223,55 +223,45 @@
     <main class="content-wrapper max-w-6xl mx-auto px-4 py-6">
         <!-- 分享输入区域 -->
         <div id="shareSection" class="glass-effect rounded-2xl p-6 mb-6 shadow-lg">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
-                <div class="space-y-3">
-                    <textarea id="textInput" placeholder="分享你的想法..." class="w-full p-4 border border-gray-200 rounded-xl resize-none focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-transparent" rows="6"></textarea>
-                    <div class="flex items-center justify-between gap-3 flex-wrap">
-                        <div class="flex items-center gap-2 flex-wrap"></div>
-                        <button id="publishBtn" class="px-4 py-2 bg-orange-500 text-white rounded-lg hover:bg-orange-600 active:scale-95 transition-all font-bold shadow-lg shadow-orange-200 flex items-center space-x-2 text-xs">
-                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.8" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"></path>
-                            </svg>
-                            <span>发布内容</span>
-                        </button>
+            <div class="space-y-4">
+                <div id="uploadArea" class="upload-area rounded-xl p-6 cursor-text">
+                    <input type="file" id="mediaInput" accept="image/*,video/*" multiple class="hidden">
+                    <input type="file" id="fileInput" multiple class="hidden">
+
+                    <div id="composerPlaceholder" class="space-y-2 text-center select-none">
+                        <svg class="w-12 h-12 text-orange-400 mx-auto" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"></path>
+                        </svg>
+                        <div>
+                            <p class="text-gray-600 font-medium">点击输入文字，或拖拽文件到这里</p>
+                            <p class="text-gray-400 text-sm mt-1">支持多文件 · 支持图片/视频/任意文件</p>
+                        </div>
                     </div>
-                    <div class="text-xs text-gray-400">支持拖拽上传 · 支持多文件</div>
+
+                    <textarea id="textInput" placeholder="分享你的想法..." class="hidden w-full bg-transparent resize-none focus:outline-none text-gray-800 placeholder-gray-400" rows="5"></textarea>
                 </div>
 
-                <div class="space-y-4">
-                    <div id="uploadArea" class="upload-area rounded-xl p-8 text-center cursor-pointer">
-                        <input type="file" id="mediaInput" accept="image/*,video/*" multiple class="hidden">
-                        <input type="file" id="fileInput" multiple class="hidden">
-                        <div class="space-y-3">
-                            <svg class="w-12 h-12 text-orange-400 mx-auto" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"></path>
-                            </svg>
-                            <div>
-                                <p class="text-gray-600 font-medium">点击选择照片/视频或文件</p>
-                                <p class="text-gray-400 text-sm mt-1">支持拖拽上传 · 支持多文件</p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="flex items-center justify-center gap-3 flex-wrap">
+                    <button id="chooseMediaBtn" class="px-4 py-2 bg-white border border-gray-200 text-gray-700 rounded-lg hover:bg-gray-50 active:scale-95 transition-all font-bold text-xs">
+                        选择照片/视频
+                    </button>
+                    <button id="chooseFileBtn" class="px-4 py-2 bg-white border border-gray-200 text-gray-700 rounded-lg hover:bg-gray-50 active:scale-95 transition-all font-bold text-xs">
+                        选择文件
+                    </button>
+                    <button id="publishBtn" class="px-4 py-2 bg-orange-500 text-white rounded-lg hover:bg-orange-600 active:scale-95 transition-all font-bold shadow-lg shadow-orange-200 text-xs">
+                        发布内容
+                    </button>
+                </div>
 
-                    <div class="flex items-center justify-center gap-3">
-                        <button id="chooseMediaBtn" class="px-4 py-2 bg-orange-500 text-white rounded-lg hover:bg-orange-600 active:scale-95 transition-all font-bold shadow-lg shadow-orange-200 text-xs">
-                            选择照片/视频
-                        </button>
-                        <button id="chooseFileBtn" class="px-4 py-2 bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200 active:scale-95 transition-all font-bold text-xs">
-                            选择文件
-                        </button>
-                    </div>
+                <div id="previewArea" class="hidden">
+                    <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3"></div>
+                </div>
 
-                    <div id="previewArea" class="hidden">
-                        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3"></div>
+                <div id="uploadProgress" class="hidden">
+                    <div class="upload-progress">
+                        <div class="upload-progress-bar" style="width: 0%"></div>
                     </div>
-
-                    <div id="uploadProgress" class="hidden">
-                        <div class="upload-progress">
-                            <div class="upload-progress-bar" style="width: 0%"></div>
-                        </div>
-                        <p class="text-sm text-gray-600 mt-2">正在上传...</p>
-                    </div>
+                    <p class="text-sm text-gray-600 mt-2">正在上传...</p>
                 </div>
             </div>
 
@@ -415,6 +405,6 @@
         </div>
     </div>
 
-    <script src="/main.js?v=2.1.5"></script>
+    <script src="/main.js?v=2.1.6"></script>
 </body>
 </html>
