--- a/public/history.html
+++ b/public/history.html
@@ -304,6 +304,13 @@
                 </svg>
                 <span class="text-xs">语音</span>
             </a>
+
+            <a href="/parse.html" class="nav-item flex flex-col items-center py-2 px-4 text-gray-500">
+                <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.8" d="M15 10l4.553-2.276A1 1 0 0121 8.618v6.764a1 1 0 01-1.447.894L15 14M5 18h8a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
+                </svg>
+                <span class="text-xs">视频解析</span>
+            </a>
             
             <a href="/history.html" class="nav-item active flex flex-col items-center py-2 px-4">
                 <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
