视频解析一键发布

--- a/public/tts.html
+++ b/public/tts.html
@@ -203,6 +203,59 @@
                     </div>
                 </div>
             </section>
+
+            <section class="glass-effect rounded-2xl p-6 shadow-lg">
+                <div class="text-lg font-bold text-gray-900">录音识别</div>
+                <div class="text-sm text-gray-500 mt-1">上传或选择已上传的音频文件，识别为文字</div>
+
+                <div class="mt-4 space-y-4">
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
+                        <div class="md:col-span-2">
+                            <label class="block text-sm font-medium text-gray-700 mb-1">公网域名（含端口）</label>
+                            <input id="asrPublicBaseUrl" class="w-full p-2 border border-gray-300 rounded-lg text-sm focus:ring-2 focus:ring-purple-500 focus:border-transparent" placeholder="例如 https://example.com 或 http://example.com:43130" />
+                            <div id="asrPublicBaseUrlHint" class="text-[11px] text-gray-400 mt-1"></div>
+                        </div>
+                        <div class="flex items-end justify-end gap-2">
+                            <button id="asrSavePublicBaseUrlBtn" type="button" class="px-4 py-2 bg-white border border-gray-200 text-gray-700 rounded-lg text-sm font-bold hover:bg-gray-50 active:scale-95 transition-all">保存域名</button>
+                        </div>
+                    </div>
+
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">上传音频</label>
+                            <input id="asrFileInput" type="file" accept="audio/*" class="w-full text-sm text-gray-700" />
+                        </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">语言（可选）</label>
+                            <input id="asrLanguage" class="w-full p-2 border border-gray-300 rounded-lg text-sm focus:ring-2 focus:ring-purple-500 focus:border-transparent" placeholder="例如 zh-CN / en-US（留空自动）" />
+                        </div>
+                        <div class="flex items-end justify-end gap-2">
+                            <button id="asrUploadRecognizeBtn" type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg text-sm font-bold hover:bg-blue-700 active:scale-95 transition-all">上传并识别</button>
+                        </div>
+                    </div>
+
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
+                        <div class="md:col-span-2">
+                            <label class="block text-sm font-medium text-gray-700 mb-1">选择已上传音频</label>
+                            <select id="asrUploadedSelect" class="w-full p-2 border border-gray-300 rounded-lg text-sm focus:ring-2 focus:ring-purple-500 focus:border-transparent bg-white"></select>
+                        </div>
+                        <div class="flex items-end justify-end gap-2">
+                            <button id="asrRefreshUploadedBtn" type="button" class="px-3 py-2 bg-white border border-gray-200 text-gray-700 rounded-lg text-sm font-bold hover:bg-gray-50 active:scale-95 transition-all">刷新列表</button>
+                            <button id="asrRecognizeSelectedBtn" type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg text-sm font-bold hover:bg-blue-700 active:scale-95 transition-all">识别所选</button>
+                        </div>
+                    </div>
+
+                    <div class="flex items-center justify-between gap-2 flex-wrap">
+                        <div id="asrStatusText" class="text-xs text-gray-500"></div>
+                        <div class="flex items-center gap-2">
+                            <button id="asrCopyBtn" type="button" class="px-3 py-2 bg-white border border-gray-200 text-gray-700 rounded-lg text-sm font-bold hover:bg-gray-50 active:scale-95 transition-all">复制结果</button>
+                            <button id="asrPublishBtn" type="button" class="px-3 py-2 bg-blue-600 text-white rounded-lg text-sm font-bold hover:bg-blue-700 active:scale-95 transition-all">发布到首页</button>
+                        </div>
+                    </div>
+
+                    <textarea id="asrResultText" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent resize-none" rows="6" placeholder="识别结果会显示在这里"></textarea>
+                </div>
+            </section>
         </div>
     </main>
 
@@ -247,6 +300,6 @@
         </div>
     </nav>
 
-    <script src="/main.js?v=2.1.6"></script>
+    <script src="/main.js?v=2.2.2"></script>
 </body>
 </html>
