--- a/public/settings.html
+++ b/public/settings.html
@@ -254,6 +254,28 @@
                         <div id="storageProgress" class="progress-fill" style="width: 0%"></div>
                     </div>
                 </div>
+
+                <div class="setting-item flex items-center justify-between p-3 rounded-lg">
+                    <div>
+                        <h4 class="font-medium text-gray-800">上传大小限制</h4>
+                        <p class="text-sm text-gray-500">单个文件最大允许上传大小</p>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <div class="flex flex-col items-end">
+                            <select id="uploadMaxSize" class="px-3 py-2 border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-orange-500">
+                                <option value="50">50MB</option>
+                                <option value="100">100MB</option>
+                                <option value="200">200MB</option>
+                                <option value="500">500MB</option>
+                                <option value="1024">1GB</option>
+                            </select>
+                            <div id="uploadMaxSizeHint" class="text-[11px] text-gray-400 mt-1"></div>
+                        </div>
+                        <button id="saveUploadLimitBtn" class="px-3 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors text-sm font-medium">
+                            保存
+                        </button>
+                    </div>
+                </div>
                 
                 <div class="setting-item flex items-center justify-between p-3 rounded-lg">
                     <div>
@@ -387,39 +409,6 @@
             </div>
         </div>
 
-        <!-- 关于信息 -->
-        <div class="glass-effect rounded-2xl p-6 shadow-lg">
-            <h3 class="text-lg font-semibold text-gray-800 mb-4 flex items-center">
-                <svg class="w-5 h-5 text-orange-600 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                </svg>
-                关于
-            </h3>
-            
-            <div class="space-y-3">
-                <div class="flex items-center justify-between">
-                    <span class="text-gray-600">版本</span>
-                    <span class="font-medium">v2.0.0</span>
-                </div>
-                <div class="flex items-center justify-between">
-                    <span class="text-gray-600">构建时间</span>
-                    <span class="font-medium">2026-01-11</span>
-                </div>
-                <div class="flex items-center justify-between">
-                    <span class="text-gray-600">存储类型</span>
-                    <span class="font-medium">服务器存储</span>
-                </div>
-                <div class="flex items-center justify-between">
-                    <span class="text-gray-600">后端服务</span>
-                    <span class="font-medium">Node.js + Express</span>
-                </div>
-                <div class="pt-3 border-t border-gray-200">
-                    <p class="text-sm text-gray-500 text-center">
-                        多媒体分享平台 - 支持多端分享的智能内容管理工具
-                    </p>
-                </div>
-            </div>
-        </div>
         <!-- 底部物理占位符 -->
         <div class="h-24"></div>
     </main>
@@ -513,6 +502,6 @@
         </div>
     </div>
 
-    <script src="/main.js?v=2.1.6"></script>
+    <script src="/main.js?v=2.2.2"></script>
 </body>
 </html>
